flux/apps/paperless/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: paperless
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      volumes:
        - name: data
          emptyDir: {}
      containers:
        - name: redis
          image: redis:7
          imagePullPolicy: Always
          ports:
            - name: redis
              containerPort: 6379
          volumeMounts:
            - mountPath: /data
              name: data
