flux/apps/paperless/paperless_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless
  namespace: paperless
spec:
  selector:
    app: paperless
  ports:
  - port: 80
    targetPort: http
