flux/apps/paperless/redis_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: paperless
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    name: redis
    targetPort: redis
