flux/apps/paperless/paperless_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless
  namespace: paperless
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/whitelist-source-range: 192.168.0.0/16
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - "paperless.reisman.org"
      secretName: paperless-tls
  rules:
    - host: "paperless.reisman.org"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: "paperless"
                port:
                  number: 80
